fix: scrollbar bg for firefox and thumb

--- a/src/layouts/general/layout.module.css
+++ b/src/layouts/general/layout.module.css
@@ -559,6 +559,9 @@
     overflow-x: hidden;
     padding-right: 1rem;
     height: 100%;
+
+    scrollbar-color: var(--color-secondary4__shade2)
+      var(--color-secondary1__shade2);
   }
   .nav__handbooks__container::-webkit-scrollbar {
     background-color: var(--color-secondary1__shade2);
